src/main/resources/tests/Semantics/good/declarationScope.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure Main is

Var1 : integer; -- Déclaration au niveau de la procédure principale.

procedure NestedProcedure is
begin
  -- Ici, Var1 fait référence à la variable déclarée au début de Main.
  Var1 := 5;
end NestedProcedure;

begin
   Var1 := 10;
   NestedProcedure; -- Appel de la procédure imbriquée.
end Main;
